--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   fluttertoast: ^8.2.2
+  shared_preferences: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
